Deep Zoom 7.x-1.x-dev, xxxx-xx-xx (development release)
--------------------------------------------------------------------------------

- #1296028: Fixed issue with generating .dzi file in Apache.


Deep Zoom 7.x-1.0, 2011-09-30
--------------------------------------------------------------------------------

- Initial 7.x release.