@@ -2,6 +2,7 @@ Deep Zoom 7.x-1.x-dev, xxxx-xx-xx (development release)
 --------------------------------------------------------------------------------
 
 - #1296028: Fixed issue with generating .dzi file in Apache.
+- Fixed Text format filter js and css caching issues.
 
 
 Deep Zoom 7.x-1.0, 2011-09-30
